--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@ h1 {
 </head>
 <body style="background-color: pink;">
 	<!-- <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSvvWzGlabgzQjkhu7VvJflt1CMZ6zM_n7HdxFVDn2GjuAi-Q58" style="margin-left: 40%; margin-right: 50%;"> -->
-	<h1 style="text-align: center;">Happy 26th Birthday<br> Motti</h1>
-	<p style="text-align: center;">Happiest birthday to my <b>best friend</b> cum <b>mami</b>. You are the <b>world's best mami</b>.<br> Bhagwaan is aurat ko jaldi se <b>patla</b> kar de aur isko hamesha <b>khush</b> rakhe nhi to ye hame bhi jeene nhi degi khushi se. </p>
+	<h1 style="text-align: center;">Happy 26th Birthday<br> Mami Ji</h1>
+	<p style="text-align: center;">Happiest birthday to my <b>best friend</b> cum <b>mami</b>. You are the <b>world's best mami</b>.<br></p>
 	<div class="container">
   		<div id="myCarousel" class="carousel slide" data-ride="carousel">
     	<!-- Indicators -->
